--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <ul>
                      <li><a href="https://www.youtube.com/user/FurballTheKing/" class="fa fa-youtube" target="_blank"><span class="label">Youtube</span></a></li>
                      <li><a href="https://steamcommunity.com/id/imhamish" class="icon fa-spin fa-steam" target="_blank"><span class="label">Steam</span></a></li>
-                     <li><a href="https://discord.gg/aWgWv8y" class="fa fa-discord" target="_blank"><span class="label">Discord</span></a></li>
+                     <li><a href="https://twitter.com/iFurball" class="fa fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
                   </ul>
                </nav>
             </header>
