--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          <div id="main">
             <header id="header">
                <h1>Hamish</h1>
-               <h2><font size="2">alex likes furries</font></h2>
+               <h2><font size="2">10-4 oil rig</font></h2>
                <nav>
                   <ul>
                      <li><a href="https://www.youtube.com/user/FurballTheKing/" class="fa fa-youtube" target="_blank"><span class="label">Youtube</span></a></li>
