--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                <h2><font size="2">10-4 oil rig</font></h2>
                <nav>
                   <ul>
-                     <li><a href="https://www.youtube.com/user/FurballTheKing/" class="fa fa-youtube" target="_blank"><span class="label">Youtube</span></a></li>
+                     <li><a href="https://www.youtube.com/user/FurballTheKing/" class="icon fa-spin fa-youtube" target="_blank"><span class="label">Youtube</span></a></li>
                      <li><a href="https://steamcommunity.com/id/imhamish" class="icon fa-spin fa-steam" target="_blank"><span class="label">Steam</span></a></li>
                   </ul>
                </nav>
