--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          <div id="main">
             <header id="header">
                <h1>Hamish</h1>
-               <h2><font size="2">q u a r a n t i n e</font></h2>
+               <h2><font size="2">jonty the dog</font></h2>
                <nav>
                   <ul>
                      <li><a href="https://www.youtube.com/user/FurballTheKing/" class="icon fa-spin fa-youtube" target="_blank"><span class="label">Youtube</span></a></li>
