--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                <nav>
                   <ul>
                      <li><a href="https://www.youtube.com/user/FurballTheKing/" class="icon fa-spin fa-youtube" target="_blank"><span class="label">Youtube</span></a></li>
-                     <li><a href="https://steamcommunity.com/id/imhamish" class="icon fa-spin fa-steam" target="_blank"><span class="label">Steam</span></a></li>
+                     <li><a href="https://steamcommunity.com/id/_Hamish_" class="icon fa-spin fa-steam" target="_blank"><span class="label">Steam</span></a></li>
                   </ul>
                </nav>
             </header>
