--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <ul>
                      <li><a href="https://www.youtube.com/user/FurballTheKing/" class="icon fa-spin fa-youtube" target="_blank"><span class="label">Youtube</span></a></li>
                      <li><a href="https://steamcommunity.com/id/_Hamish_" class="icon fa-spin fa-steam" target="_blank"><span class="label">Steam</span></a></li>
-                     <li><a href="shop.hamish.xyz" class="icon fa-spin fa-shop" target="_blank"><span class="label">Shop</span></a></li>
+                     <li><a href="https://shop.hamish.xyz/" class="icon fa-spin fa-shop" target="_blank"><span class="label">Shop</span></a></li>
                   </ul>
                </nav>
             </header>
