--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
    <script src='assets/js/variable.js'></script>
    <script src='assets/js/main.js'></script>
    <script src='assets/js/demo.js'></script>
+   <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
