--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
    <script src='assets/js/variable.js'></script>
    <script src='assets/js/main.js'></script>
    <script src='assets/js/demo.js'></script>
-   <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
