--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                <nav>
                   <ul>
                      <li><a href="https://www.youtube.com/user/FurballTheKing/" class="icon fa-spin fa-youtube" target="_blank"><span class="label">Youtube</span></a></li>
-                     <li><a href="https://shop.hamish.xyz/" class="fa fa-cash" target="_blank"><span class="label">Card</span></a></li>
+                     <li><a href="https://shop.hamish.xyz/" class="fa-spin fa-card" target="_blank"><span class="label">Card</span></a></li>
                      <li><a href="https://steamcommunity.com/id/_Hamish_" class="icon fa-spin fa-steam" target="_blank"><span class="label">Steam</span></a></li>
                   </ul>
                </nav>
@@ -59,8 +59,7 @@
    <script src='assets/js/variable.js'></script>
    <script src='assets/js/main.js'></script>
    <script src='assets/js/demo.js'></script>
-   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+   <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
