--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <link rel='stylesheet' href='assets/css/theme_black_red.css' id="theme">
    <link rel='stylesheet' href='assets/css/custom.css'>
    <link rel='stylesheet' href='assets/css/demo.css'>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/fontawesome.min.css">
    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
    <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
    <script src='assets/js/vendor/html5shiv.min.js'></script>
