--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                <h2><font size="2">jonty the dog</font></h2>
                <nav>
                   <ul>
-                     <li><a href="https://www.youtube.com/user/FurballTheKing/" class="icon fa-spin fa-youtube" target="_blank"><span class="label">Youtube</span></a></li>
-                     <li><a href="https://shop.hamish.xyz/" class="fa-spin fa-card" target="_blank"><span class="label">Card</span></a></li>
-                     <li><a href="https://steamcommunity.com/id/_Hamish_" class="icon fa-spin fa-steam" target="_blank"><span class="label">Steam</span></a></li>
+                     <li><a href="https://www.youtube.com/user/FurballTheKing/" class="icon fa-spin fas-youtube" target="_blank"><span class="label">Youtube</span></a></li>
+                     <li><a href="https://shop.hamish.xyz/" class="fa-spin fas-card" target="_blank"><span class="label">Card</span></a></li>
+                     <li><a href="https://steamcommunity.com/id/_Hamish_" class="icon fa-spin fas-steam" target="_blank"><span class="label">Steam</span></a></li>
                   </ul>
                </nav>
             </header>
