--- a/index.html
+++ b/index.html
@@ -1,135 +1,130 @@
+<!DOCTYPE html>
+<html>
+
 <head>
-   <title>Hamish</title>
-   <meta charset="utf-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="description" content="">
-   <meta name="keywords" content="">
-   <meta name="author" content="">
-   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-   <meta charset="utf-8" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <link rel="stylesheet" href="assets/css/main.css" />
-   <link rel='stylesheet' href='assets/css/bootstrap.min.css'>
-   <link rel='stylesheet' href='assets/css/vendor.css'>
-   <link rel='stylesheet' href='assets/css/theme_black_red.css' id="theme">
-   <link rel='stylesheet' href='assets/css/custom.css'>
-   <link rel='stylesheet' href='assets/css/demo.css'>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/fontawesome.min.css">
-   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-   <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
-   <script src='assets/js/vendor/html5shiv.min.js'></script>
-   <link rel="icon" type="image/ico" href="fav.ico"/>
+    <title>Hamish</title>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel='stylesheet' href='assets/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='assets/css/vendor.css'>
+    <link rel='stylesheet' href='assets/css/theme_black_blue.css' id="theme">
+    <link rel='stylesheet' href='assets/css/custom.css'>
+    <link rel='stylesheet' href='assets/css/demo.css'>
+    <script src="assets/js/vendor/modernizr-3.6.0-custom.js"></script>
+    <script src='assets/js/vendor/html5shiv.min.js'></script>
+    <script src="https://kit.fontawesome.com/f1ca726f4b.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/ico" href="fav.ico" />
+    <script language="JavaScript">
+    //////////F12 disable code////////////////////////
+    document.onkeypress = function (event) {
+        event = (event || window.event);
+        if (event.keyCode == 123) {
+            //alert('No F-12');
+            return false;
+        }
+    }
+    document.onmousedown = function (event) {
+        event = (event || window.event);
+        if (event.keyCode == 123) {
+            //alert('No F-keys');
+            return false;
+        }
+    }
+    document.onkeydown = function (event) {
+        event = (event || window.event);
+        if (event.keyCode == 123) {
+            //alert('No F-keys');
+            return false;
+        }
+    }
+    var message = ":o";
+    function clickIE() { if (document.all) { (message); return false; } }
+    function clickNS(e) {
+        if
+            (document.layers || (document.getElementById && !document.all)) {
+            if (e.which == 2 || e.which == 3) { (message); return false; }
+        }
+    }
+    if (document.layers) { document.captureEvents(Event.MOUSEDOWN); document.onmousedown = clickNS; }
+    else { document.onmouseup = clickNS; document.oncontextmenu = clickIE; }
+    document.oncontextmenu = new Function("return false")
+    function disableCtrlKeyCombination(e) {
+        var forbiddenKeys = new Array('a', 'n', 'c', 'x', 'v', 'j', 'w');
+        var key;
+        var isCtrl;
+        if (window.event) {
+            key = window.event.keyCode;
+            if (window.event.ctrlKey)
+                isCtrl = true;
+            else
+                isCtrl = false;
+        }
+        else {
+            key = e.which;
+            if (e.ctrlKey)
+                isCtrl = true;
+            else
+                isCtrl = false;
+        }
+        if (isCtrl) {
+            for (i = 0; i < forbiddenKeys.length; i++) {
+                if (forbiddenKeys[i].toLowerCase() == String.fromCharCode(key).toLowerCase()) {
+                    alert('Key combination CTRL + ' + String.fromCharCode(key) + ' has been disabled.');
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
+</script>
 </head>
-<body onLoad="scrlsts()">
-   <div class="site-loader">
-      <span></span>
-      <p>Loading Memes...</p>
-   </div>
-   <div class="pmeme">
-      <video id="video" autoplay="autoplay" loop="loop" onloadstart="this.volume=0.2">
-         <source src="assets/ded.mp4" type="video/mp4"></source>
-      </video>
-   </div>
-   <div class="site-bg">
-      <div class="site-bg__overlay"></div>
-      <div class="site_countdown"></div>
-      <div class="site-bg__effect"></div>
-      <canvas class="site-bg__canvas"></canvas>
-   </div>
-   </header>
-   <div class="loading">
-      <div id="wrapper">
-         <div id="main">
-            <header id="header">
-               <h1>Hamish</h1>
-               <h2><font size="2">jonty the dog</font></h2>
-               <nav>
-                  <ul>
-                     <li><a href="https://www.youtube.com/user/FurballTheKing/" class="icon fa-spin fas-youtube" target="_blank"><span class="label">Youtube</span></a></li>
-                     <li><a href="https://shop.hamish.xyz/" class="fa-spin fas-card" target="_blank"><span class="label">Card</span></a></li>
-                     <li><a href="https://steamcommunity.com/id/_Hamish_" class="icon fa-spin fas-steam" target="_blank"><span class="label">Steam</span></a></li>
-                  </ul>
-               </nav>
-            </header>
-         </div>
-      </div>
-   </div>
-   <script src="assets/js/vendor/jquery-2.1.4.min.js"></script>
-   <script src='assets/js/vendor/bootstrap.min.js'></script>
-   <script src='assets/js/vendor/plugin.js'></script>
-   <script src='assets/js/variable.js'></script>
-   <script src='assets/js/main.js'></script>
-   <script src='assets/js/demo.js'></script>
-   <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+<body>
+    <div class="site-loader">
+        <span></span>
+        <p>Loading Memes...</p>
+    </div>
+    <div class="pmeme">
+        <video id="video" autoplay="autoplay" loop="loop" onloadstart="this.volume=0.2">
+            <source src="assets/ded.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div class="site-bg">
+        <div class="site-bg__overlay"></div>
+        <div class="site_countdown"></div>
+        <div class="site-bg__effect"></div>
+        <canvas class="site-bg__canvas"></canvas>
+    </div>
+    <div class="loading">
+        <div id="wrapper">
+            <div id="main">
+                <header id="header">
+                    <h1>Hamish</h1>
+                    <h2><font size="2">jonty the dog</font></h2>
+                    <nav>
+                        <ul>
+                            <li><a href="https://www.youtube.com/c/HamishXYZ/"class="fa-brands fa-youtube fa-spin" target="_blank"><span class="label">Youtube</span></a></li>
+                            <li><a href="https://shop.hamish.xyz/" class="fa-regular fa-credit-card fa-spin" target="_blank"><span class="label">Card</span></a></li>
+                            <li><a href="https://steamcommunity.com/id/_Hamish_" class="fa-brands fa-steam fa-spin" target="_blank"><span class="label">Steam</span></a></li>
+                        </ul>
+                    </nav>
+                </header>
+            </div>
+        </div>
+    </div>
+    <script src="assets/js/vendor/jquery-2.1.4.min.js"></script>
+    <script src='assets/js/vendor/bootstrap.min.js'></script>
+    <script src='assets/js/vendor/plugin.js'></script>
+    <script src='assets/js/variable.js'></script>
+    <script src='assets/js/main.js'></script>
+    <script src='assets/js/demo.js'></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
-<head>
-   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-   <script language="JavaScript">
-      //////////F12 disable code////////////////////////
-          document.onkeypress = function (event) {
-              event = (event || window.event);
-              if (event.keyCode == 123) {
-                 //alert('No F-12');
-                  return false;
-              }
-          }
-          document.onmousedown = function (event) {
-              event = (event || window.event);
-              if (event.keyCode == 123) {
-                  //alert('No F-keys');
-                  return false;
-              }
-          }
-      document.onkeydown = function (event) {
-              event = (event || window.event);
-              if (event.keyCode == 123) {
-                  //alert('No F-keys');
-                  return false;
-              }
-          }
-      var message=":o";      
-      function clickIE() {if (document.all) {(message);return false;}}
-      function clickNS(e) {if
-      (document.layers||(document.getElementById&&!document.all)) {
-      if (e.which==2||e.which==3) {(message);return false;}}}
-      if (document.layers)
-      {document.captureEvents(Event.MOUSEDOWN);document.onmousedown=clickNS;}
-      else{document.onmouseup=clickNS;document.oncontextmenu=clickIE;}
-      document.oncontextmenu=new Function("return false")
-      function disableCtrlKeyCombination(e)
-      {
-      var forbiddenKeys = new Array('a', 'n', 'c', 'x', 'v', 'j' , 'w');
-      var key;
-      var isCtrl;
-      if(window.event)
-      {
-      key = window.event.keyCode;
-      if(window.event.ctrlKey)
-      isCtrl = true;
-      else
-      isCtrl = false;
-      }
-      else
-      {
-      key = e.which;
-      if(e.ctrlKey)
-      isCtrl = true;
-      else
-      isCtrl = false;
-      }
-      if(isCtrl)
-      {
-      for(i=0; i<forbiddenKeys.length; i++)
-      {
-      if(forbiddenKeys[i].toLowerCase() == String.fromCharCode(key).toLowerCase())
-      {
-      alert('Key combination CTRL + '+String.fromCharCode(key) +' has been disabled.');
-      return false;
-      }
-      }
-      }
-      return true;
-      }
-   </script>
-</head>
+
 </html>
